--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=bingoGame
 
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.database=0
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bingo_db
